--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.8.2"
+    "webpack-dev-server": "^3.8.2",
+    "@types/clean-webpack-plugin": "^0.1.3",
+    "url-loader": "^2.2.0"
   },
   "dependencies": {
-    "url-loader": "^2.2.0"
   }
 }
